--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -25,7 +25,8 @@
         <tbody>
         <td th:text="${user.id}"></td>
         <td th:text="${user.username}"></td>
-        <th:text="${role.name.replace('ROLE_', ' ')}">
+        <th:text
+        ="${role.name.replace('ROLE_', ' ')}">
         <td>
             <span th:each="role : ${user.roles}"
                   th:class="${role.name == 'ROLE_ADMIN'}"
