--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <title>Login page</title>
 </head>
-<h1>Страница входа</h1>
 <body>
+<h1>Страница входа</h1>
 <div th:if="${param.error}" style="color: red">
     Неправильное имя или пароль
 </div>
@@ -13,15 +13,17 @@
     Вы вышли из системы
 </div>
 <form th:action="@{/perform_login}" method="post">
-    <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">
-    <label for="username">Введите имя пользователя: </label>
-    <input type="text" name="username" id="username"/>
-    <br>
-    <label for="password">Введите пароль: </label>
-    <input type="password" name="password" id="password"/>
-    <br><br>
-    <a th:href="@{/register}" style="text-decoration: none;">Нет учётной записи? Зарегистрируйся.</a>
-    <br><br>
+    <!--    <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>-->
+    <div>
+        <label for="username">Введите имя пользователя:</label>
+        <input type="text" name="username" id="username" placeholder="Ваш логин" required autofocus/>
+    </div>
+    <div>
+        <label for="password">Введите пароль:</label>
+        <input type="password" name="password" id="password" placeholder="Ваш пароль" required/>
+    </div>
+    <p style="margin-top: 1rem;"><a href="#" th:href="@{/register}" style="text-decoration: underline;">Нет учетной
+        записи? Зарегистрируйтесь.</a></p>
     <div>
         <button type="submit">Вход</button>
     </div>
