Fix: Double hashing of passwords Add: DatabaseInitializer

--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -43,6 +43,6 @@
     </form>
     <br>
 </div>
-<div th:replace="fragments/logout-section :: logout"></div>
+<div th:replace="~{fragments/logout-section :: logout}"></div>
 </body>
 </html>
